Framework: Add Quick Settings Sync tile (2 of 2)
- Adds the QS Sync tile (drawables thanks to Björn Lundén)
- Removes deprecated, pre ICS code in Power widget

Change-Id: I4e25348a8afddf4398a0814282033b285c995c3c

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -532,6 +532,7 @@
     <string name="quick_settings_mobile_data_on">Mobile data</string>
     <string name="quick_settings_mobile_data_off">Mobile data off</string>
     <string name="quick_settings_reboot">Reboot</string>
+    <string name="quick_settings_sync">Sync</string>
 
     <!-- Title of help text shown when the notification panel is pulled down for the very first time. [CHAR LIMIT=NONE] -->
     <string name="status_bar_help_title">Notifications appear here</string>
