--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -534,6 +534,7 @@
     <string name="quick_settings_reboot">Reboot</string>
     <string name="quick_settings_sync">Sync</string>
     <string name="quick_settings_torch">Torch</string>
+    <string name="quick_settings_nfc">NFC</string>
 
     <!-- Title of help text shown when the notification panel is pulled down for the very first time. [CHAR LIMIT=NONE] -->
     <string name="status_bar_help_title">Notifications appear here</string>
