[Framework] QS: Add Mobile data tile + fixes (1/2)
    Add mobile data tile acting like the pw tile.
    Remove mobile data function from MobileNetworkTile

    MobileNetworkTile now is acting like AOSP

    renamed internal naming to be more logic

    Patchset2:
     add longpress action to MobileNetworkTile back I removed Patchset1

Change-Id: I09c5a9d0d9d1633d537e15b7c6463e7187f9249c

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -529,6 +529,8 @@
     <string name="quick_settings_lockscreen">Lock screen</string>
     <string name="quick_settings_network_type">Network mode</string>
     <string name="quick_settings_report_bug">Report bug</string>
+    <string name="quick_settings_mobile_data_on">Mobile data</string>
+    <string name="quick_settings_mobile_data_off">Mobile data off</string>
 
     <!-- Title of help text shown when the notification panel is pulled down for the very first time. [CHAR LIMIT=NONE] -->
     <string name="status_bar_help_title">Notifications appear here</string>
