--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -531,6 +531,7 @@
     <string name="quick_settings_report_bug">Report bug</string>
     <string name="quick_settings_mobile_data_on">Mobile data</string>
     <string name="quick_settings_mobile_data_off">Mobile data off</string>
+    <string name="quick_settings_reboot">Reboot</string>
 
     <!-- Title of help text shown when the notification panel is pulled down for the very first time. [CHAR LIMIT=NONE] -->
     <string name="status_bar_help_title">Notifications appear here</string>
