--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -535,6 +535,7 @@
     <string name="quick_settings_sync">Sync</string>
     <string name="quick_settings_torch">Torch</string>
     <string name="quick_settings_nfc">NFC</string>
+    <string name="quick_settings_fcharge">Fast charge</string>
     <string name="quick_settings_screen_timeout">Timeout</string>
     <string name="quick_settings_screen_timeout_summary">%1$d %2$s</string>
 
