Framework:Notification Drawer Brightness Slider - (1/2)
Patchset 10:

fixed the compile errors

Patchset 11:
- cleanup tabs and whitespaces
- cleanup unused code
- cleanup code which doesn't work for 4.2.1
- change getInt and putInt to getIntForUser and putIntForUser
- change setBrightness to new aosp handling
- rearrangments
- optical changes to fit better to 4.2.1
- animation same as pw because a pw feature

Patchset 12
- added forgoten userhandling observer

Patchset 13
- added license text xml

Patchset 14
- damn old code - another cleanup unused imports

cheers

Lars

Change-Id: I28c0a61c684be8429331a1445e261c5150a10138

--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -567,4 +567,7 @@
     <string name="toggle_ring_vib_silent">Ring/Vib/Silent - Toggle</string>
     <string name="app_killed_message">App Killed</string>
 
+    <!-- Label in drop down to identify brightness slider -->
+    <string name="brightness_label">Brightness</string>
+
 </resources>
